# vectr

./: .dockerignore  .env.example  .gitignore  .mcp.json  .vectrignore  CHANGELOG.md  CLAUDE.md  DIAGNOSIS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  api.py  docker-compose.yml  glama.json  main.py  pyproject.toml  pytest.ini  requirements.txt  server.json
.claude/: settings.json
.cursor/: mcp.json
.github/workflows/: ci.yml  mcp-registry-publish.yml  pypi-publish.yml  vscode-publish.yml
agent/: cache_maintenance.py  cartographer.py  chroma_dispatch.py  chunk_quality.py  config.py  config.yaml  episode_canon.py  episode_normalize.py  episode_store.py  episode_worker.py  eviction_advisor.py  fs_permissions.py  hook_cli.py  identifier_hint.py  indexer.py  instance_registry.py  llm_client.py  markers.yaml  model_cache.py  outcome.py  prompt_templates.py  query_router.py  render_paths.py  searcher.py  strategy_selector.py  symbol_graph.py  tool_necessity_probe.py  trigger_engine.py  vectr_agent.py  version_stamp.py  watcher.py  working_context_store.py
agent/data/: english_stopwords.txt  prog_stopwords.txt
agent/indexer/: __init__.py  _chunking.py  _constants.py  _core.py  _types.py
agent/proactive/: __init__.py  cache.py  gate.py  matcher.py  provider.py  proxy.py  request_window.py  settings.py  types.py
agent/symbol_graph/: __init__.py  _constants.py  _extraction.py  _graph.py  _types.py
agent/templates/: claude_md.md  claude_md_search_only.md  codex_mcp.toml.template  cursor_mcp.json.template  cursor_rules_header.txt  git_post_commit_hook.sh.template  hook_no_double_recall.txt  mcp.json.template  session_start_guidance_default.txt  (+4 more)
app/: arcs.py  cmdnorm.py  models.py  routes.py  service.py
benchmarks/: README.md  arc_replay.py  arc_replay_results.md
docs/: _config.yml  data-handling.md  index.html
examples/: sample_search.json
integrations/: mcp_server.py  vscode_bridge.py  workspace_detect.py
planning/: design.md  research.md  tasks.md
research/: README.md
scripts/: release.sh
tests/: _proactive_upstream.py  _seam.py  conftest.py  test_agent.py  test_api.py  test_api_memory.py  test_arc_distill.py  test_arcs.py  test_cache_maintenance.py  test_cartographer.py  test_chroma_dispatch.py  test_chunk_quality.py  test_cmd_hook_post_tool_use.py  test_cmdnorm.py  test_commit_hook.py  test_config_loader.py  test_decision_timeline.py  test_embed_thread_cap.py  test_episode_canon.py  test_episode_normalize.py  test_episode_route.py  test_episode_store.py  test_episode_worker.py  test_eviction_advisor.py  test_eviction_session_scope.py  test_fetch_route.py  test_grammar_availability.py  test_hint_language_live.py  test_hook_cli_parity.py  test_hook_import_cost.py  test_hook_injection_observability.py  test_identifier_hint.py  test_indexer_searcher.py  test_instance_registry.py  test_integration.py  test_main.py  test_mcp_jsonrpc.py  test_mcp_server.py  test_mcp_session_handshake.py  test_mcp_stdio.py  (+37 more)
vscode-extension/: .vscodeignore  README.md  package.json
(+259 files in other folders)
