[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "api"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "app*", "integrations*"]

[project]
name = "vectr"
version = "1.0.0"
description = "Zero-config local semantic codebase indexer with MCP protocol"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.47.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
    "sentence-transformers==5.5.1",
    "chromadb==1.5.9",
    "tree-sitter==0.25.2",
    "tree-sitter-python==0.25.0",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-go==0.25.0",
    "tree-sitter-rust==0.24.2",
    "tree-sitter-java==0.23.5",
    "watchdog==6.0.0",
    "rank-bm25==0.2.2",
]

[project.optional-dependencies]
openai = [
    "openai==2.38.0",
]
encryption = [
    "cryptography>=43.0",
]
ragas = [
    "ragas>=0.1",
]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "anyio==4.13.0",
]

[project.scripts]
vectr = "main:main"
